# QuantumLabs

./: .env.example  .gitignore  README.md  dev.sh  main.py  pyproject.toml
agents/: chat_agent.py  code_agent.py  code_eski.py  llm.py  simple_agent.py
agents/workspace/: snippet_20260629_152116.py  snippet_20260629_152123.py  snippet_20260629_152207.py
api/: approvers.py  main.py
deploy/: Caddyfile  README.md  quantumlabs-api.service
eval/: README.md  compare.py  harness.py  judge.py  tasks.jsonl
experiments/finetune/: .gitignore  README.md  prepare_data.py  requirements.txt  train_lora.py
infrastructure/: docker-compose.yml
protocols/: checkpoint.py  safety.py
runtime/: memory_ingest.py  memory_inject.py  profile.py  session.py  transcript.py
services/: pyproject.toml
services/memory-service/: main.py  pyproject.toml
services/memory-service/app/: database.py  embedding.py  main.py  main.py.bak  qdrant_client.py
tests/: conftest.py  test_agent_loop.py  test_api.py  test_config.py  test_dispatch.py  test_hydration.py  test_llm.py  test_memory_ingest.py  test_memory_inject.py  test_memory_tool.py  test_model_selection.py  test_observation.py  test_security.py  test_session_isolation.py  test_sessions_list.py  test_tools.py  test_transcript.py  test_web_approver.py
tools/: __init__.py  edit.py  loader.py  memory.py  observation.py  prompt.py  registry.py  runner.py  search.py  shell.py
train/: curate.py
web/: .env.local.example  .gitignore  package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/(app)/: layout.tsx
web/app/(app)/new/: page.tsx
web/app/(app)/sessions/[id]/: page.tsx
web/app/(marketing)/: page.tsx
web/components/: app-sidebar.tsx  chat-session.tsx  composer.tsx  copy-button.tsx  session-stream.tsx
web/hooks/: use-mobile.ts
web/lib/: api.ts
