[project]
name = "quantumlabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.uv.workspace]
members = [
    "services",
    "services/memory-service",
]

[tool.pytest.ini_options]
pythonpath = ["."]        # tool modullerinin agents.* / tools.* import'u icin
testpaths = ["tests"]
addopts = "-q"
