[project]
name = "memory-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "psycopg[binary]>=3.2.13",
    "qdrant-client>=1.16.1",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.39.0",
]
